--- a/index.html
+++ b/index.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Jeremy Crow, Gnostic Luciferian philosopher and founder of Novus Ordo Luciferi. Join NOL to embody the Light Bearer archetype.">
-<title>Jeremy Crow | Light Bearer</title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Playfair+Display&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Jeremy Crow, Gnostic Luciferian philosopher and founder of Novus Ordo Luciferi. Join NOL to embody the Light Bearer archetype.">
+  <title>Jeremy Crow | Light Bearer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Playfair+Display&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css"> <!-- Removed leading / for relative path -->
 </head>
 <body class="dark-mode">
-<button class="mode-toggle" onclick="toggleMode()">Toggle Light/Dark Mode</button>
-<header>
-<img src="https://img.freepik.com/premium-photo/detailed-character-illustration-moody-crow-green-background_899449-59613.jpg" alt="Mystical crow with emerald glow" class="header-image">
-<h1>Jeremy Crow</h1>
-<nav>
-<a href="/">Home</a>
-<a href="https://jeremycrow.storenvy.com/products/22257071-double-oroboros-luciferian-research-society-t-shirt-gold-on-black" target="_blank">Shop</a>
-<a href="#socials">Socials</a>
-</nav>
-</header>
-<main>
-<section class="hero">
-<h2>Luciferian Philosopher & Light Bearer</h2>
-<p>Jeremy Crow is an instructor, artist, and community organizer with over 40 years of experience in lucid dreaming, over 30 years experience as a practicing occultist, and has considered himself a Gnostic Luciferian for over 25 years. Crow is an ordained Priest in an Apostolic Gnostic Church, has been initiated into several Esoteric Orders and taken officer roles within them, including "Clandestine" Freemasonry (Co-Masonry and Memphis-Misraim), Hermetic Order of the Golden Dawn, OTO, and has served as the Head of the Ordo Luciferi, Greater Church of Lucifer (later renamed Assembly of Light Bearers), and has founded the Luciferian Research Society and the Flambeau Noir International Left Hand Path Conference. He is the founder and head of the Novus Ordo Luciferi, which is the cumulation of his esoteric work and a vehicle for teaching his unique system of occultism called, Luciferian Alchemy.</p>
-<a href="https://patreon.com/novusordoluciferi" target="_blank" class="cta-button">Join Novus Ordo Luciferi on Patreon</a>
-</section>
-<section class="video">
-<h3>Discover the Path: Gnostic Christianity vs. Gnostic Luciferianism</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/VFggckToqX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</section>
-<section class="shop">
-<h3>Explore My Work</h3>
-<a href="https://jeremycrow.storenvy.com/products/22257071-double-oroboros-luciferian-research-society-t-shirt-gold-on-black" target="_blank">
-<img src="https://prod-cdn-08.storenvy.com/product_photos/58097276/1400x1400_3287157T_mockup_Flat-Front_Black_400w.png" alt="Double-Oroboros Luciferian Research Society T-Shirt">
-<p>Double-Oroboros Luciferian Research Society T-Shirt (Gold on Black)</p>
-</a>
-</section>
-</main>
-<footer id="socials">
-<div class="socials">
-<a href="https://www.youtube.com/JeremyCrow" target="_blank">YouTube</a>
-<a href="https://discord.gg/GvjsS4C" target="_blank">Discord</a>
-<a href="https://www.facebook.com/PrimusJeremyCrow" target="_blank">Facebook</a>
-<a href="https://www.threads.com/@jeremycrow" target="_blank">Threads</a>
-<a href="https://bsky.app/profile/jeremycrow.bsky.social" target="_blank">BlueSky</a>
-<a href="https://x.com/JeremyCrow" target="_blank">X</a>
-</div>
-<p>Embody the Light Bearer: <a href="https://patreon.com/novusordoluciferi" target="_blank">Join NOL on Patreon</a></p>
-<p>© Jeremy Crow 2025</p>
-</footer>
-<script src="script.js"></script>
+  <button class="mode-toggle" onclick="toggleMode()">Toggle Light/Dark Mode</button>
+  <header>
+    <img src="https://img.freepik.com/premium-photo/detailed-character-illustration-moody-crow-green-background_899449-59613.jpg" alt="Mystical crow with emerald glow" class="header-image">
+    <h1>Jeremy Crow</h1>
+    <nav>
+      <a href="/">Home</a>
+      <a href="https://jeremycrow.storenvy.com/products/22257071-double-oroboros-luciferian-research-society-t-shirt-gold-on-black" target="_blank">Shop</a>
+      <a href="#socials">Socials</a>
+    </nav>
+  </header>
+  <main>
+    <section class="hero">
+      <h2>Luciferian Philosopher & Light Bearer</h2>
+      <p>Jeremy Crow is an instructor, artist, and community organizer with over 40 years of experience in lucid dreaming, over 30 years experience as a practicing occultist, and has considered himself a Gnostic Luciferian for over 25 years. Crow is an ordained Priest in an Apostolic Gnostic Church, has been initiated into several Esoteric Orders and taken officer roles within them, including "Clandestine" Freemasonry (Co-Masonry and Memphis-Misraim), Hermetic Order of the Golden Dawn, OTO, and has served as the Head of the Ordo Luciferi, Greater Church of Lucifer (later renamed Assembly of Light Bearers), and has founded the Luciferian Research Society and the Flambeau Noir International Left Hand Path Conference. He is the founder and head of the Novus Ordo Luciferi, which is the cumulation of his esoteric work and a vehicle for teaching his unique system of occultism called, Luciferian Alchemy.</p>
+      <a href="https://patreon.com/novusordoluciferi" target="_blank" class="cta-button">Join Novus Ordo Luciferi on Patreon</a>
+    </section>
+    <section class="video">
+      <h3>Discover the Path: Gnostic Christianity vs. Gnostic Luciferianism</h3>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/VFggckToqX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </section>
+    <section class="shop">
+      <h3>Explore My Work</h3>
+      <a href="https://jeremycrow.storenvy.com/products/22257071-double-oroboros-luciferian-research-society-t-shirt-gold-on-black" target="_blank">
+        <img src="https://prod-cdn-08.storenvy.com/product_photos/58097276/1400x1400_3287157T_mockup_Flat-Front_Black_400w.png" alt="Double-Oroboros Luciferian Research Society T-Shirt">
+        <p>Double-Oroboros Luciferian Research Society T-Shirt (Gold on Black)</p>
+      </a>
+    </section>
+  </main>
+  <footer id="socials">
+    <div class="socials">
+      <a href="https://www.youtube.com/JeremyCrow" target="_blank">YouTube</a>
+      <a href="https://discord.gg/GvjsS4C" target="_blank">Discord</a>
+      <a href="https://www.facebook.com/PrimusJeremyCrow" target="_blank">Facebook</a>
+      <a href="https://www.threads.com/@jeremycrow" target="_blank">Threads</a>
+      <a href="https://bsky.app/profile/jeremycrow.bsky.social" target="_blank">BlueSky</a>
+      <a href="https://x.com/JeremyCrow" target="_blank">X</a>
+    </div>
+    <p>Embody the Light Bearer: <a href="https://patreon.com/novusordoluciferi" target="_blank">Join NOL on Patreon</a></p>
+    <p>© Jeremy Crow 2025</p>
+  </footer>
+  <script src="script.js"></script>
 </body>
 </html>
