--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles.css"> <!-- Removed leading / for relative path -->
 </head>
 <body class="dark-mode">
-  <button class="mode-toggle" onclick="toggleMode()">Toggle Light/Dark Mode</button>
+  <button class="mode-toggle" onclick="toggleMode()">Light/Dark</button>
   <header>
     <img src="https://img.freepik.com/premium-photo/detailed-character-illustration-moody-crow-green-background_899449-59613.jpg" alt="Mystical crow with emerald glow" class="header-image">
     <h1>Jeremy Crow</h1>
@@ -22,18 +22,20 @@
   <main>
     <section class="hero">
       <h2>Luciferian Philosopher & Light Bearer</h2>
-      <p>Jeremy Crow is an instructor, artist, and community organizer with over 40 years of experience in lucid dreaming, over 30 years experience as a practicing occultist, and has considered himself a Gnostic Luciferian for over 25 years. Crow is an ordained Priest in an Apostolic Gnostic Church, has been initiated into several Esoteric Orders and taken officer roles within them, including "Clandestine" Freemasonry (Co-Masonry and Memphis-Misraim), Hermetic Order of the Golden Dawn, OTO, and has served as the Head of the Ordo Luciferi, Greater Church of Lucifer (later renamed Assembly of Light Bearers), and has founded the Luciferian Research Society and the Flambeau Noir International Left Hand Path Conference. He is the founder and head of the Novus Ordo Luciferi, which is the cumulation of his esoteric work and a vehicle for teaching his unique system of occultism called, Luciferian Alchemy.</p>
+      <p>Jeremy Crow is an instructor, artist, and community organizer with over 40 years of experience in lucid dreaming, over 30 years experience as a practicing occultist, and has considered himself a Gnostic Luciferian for over 25 years. Crow is an ordained Priest in an Apostolic Gnostic Church, has been initiated into several Esoteric Orders and taken officer roles within them, including "Clandestine" Freemasonry (Co-Masonry and Memphis-Misraim), Hermetic Order of the Golden Dawn, and the Ordo Templi Orientis (OTO.) Crow has served as the Head of the Ordo Luciferi and the Greater Church of Lucifer (later renamed Assembly of Light Bearers.) He founded the Luciferian Research Society (LRS) community hub and the Flambeau Noir International Left Hand Path Conference. He is the founder and head of the Novus Ordo Luciferi, a Gnostic Luciferian Esoteric Order. Known in English as the New Order of Light Bearers, it is the primary vehicle for teaching his unique system of occultism called, Luciferian Alchemy.</p>
       <a href="https://patreon.com/novusordoluciferi" target="_blank" class="cta-button">Join Novus Ordo Luciferi on Patreon</a>
     </section>
     <section class="video">
-      <h3>Discover the Path: Gnostic Christianity vs. Gnostic Luciferianism</h3>
+      <h3>How does Gnostic Luciferianism compare with Gnostic Christianity?</h3>
+      <div class="video-container">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/VFggckToqX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
     </section>
     <section class="shop">
-      <h3>Explore My Work</h3>
+      <h3>Represent Your Luciferian Pride</h3>
       <a href="https://jeremycrow.storenvy.com/products/22257071-double-oroboros-luciferian-research-society-t-shirt-gold-on-black" target="_blank">
         <img src="https://prod-cdn-08.storenvy.com/product_photos/58097276/1400x1400_3287157T_mockup_Flat-Front_Black_400w.png" alt="Double-Oroboros Luciferian Research Society T-Shirt">
-        <p>Double-Oroboros Luciferian Research Society T-Shirt (Gold on Black)</p>
+        <p>Featured Item: Double-Oroboros LRS T-Shirt (Gold on Black)</p>
       </a>
     </section>
   </main>
@@ -52,3 +54,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
