Update header image for index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="dark-mode">
 <button class="mode-toggle" onclick="toggleMode()">Light/Dark</button>
 <header>
-<img src="https://img.freepik.com/premium-photo/detailed-character-illustration-moody-crow-green-background_899449-59613.jpg" alt="Mystical crow with emerald glow" class="header-image">
+<img src="/JC-Banner.png" alt="Jeremy Crow Snakeskin Banner with NOL Sigil" class="header-image">
 <h1>Jeremy Crow</h1>
 <nav>
 <a href="/">Home</a>
@@ -54,3 +54,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
