--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <main>
 <section class="hero">
 <h2>Luciferian Philosopher & Light Bearer</h2>
-<p>Jeremy Crow is an instructor, artist, and community organizer with over 40 years of experience in lucid dreaming, over 30 years experience as a practicing occultist, and has considered himself a Gnostic Luciferian for over 25 years. Crow is an ordained Priest in an Apostolic Gnostic Church, has been initiated into several Esoteric Orders and taken officer roles within them, including "Clandestine" Freemasonry (Co-Masonry and Memphis-Misraim), Hermetic Order of the Golden Dawn, and the Ordo Templi Orientis (OTO.) Crow has served as the Head of the Ordo Luciferi and the Greater Church of Lucifer (later renamed Assembly of Light Bearers.) He founded the Luciferian Research Society (LRS) community hub and the Flambeau Noir International Left Hand Path Conference. He is the founder and head of the Novus Ordo Luciferi, a Gnostic Luciferian Esoteric Order. Known in English as the New Order of Light Bearers, it is the primary vehicle for teaching his unique system of occultism called, Luciferian Alchemy.</p>
+<p>Jeremy Crow is an instructor, artist, and community organizer with over 40 years of experience in lucid dreaming, over 30 years experience as a practicing occultist, and has considered himself a Gnostic Luciferian for over 25 years. Crow is an ordained Priest in an Apostolic Gnostic Church, has been initiated into several Esoteric Orders and taken officer roles within them, including "Clandestine" Freemasonry (Co-Masonry and Memphis-Misraim), Hermetic Order of the Golden Dawn, and the Ordo Templi Orientis (OTO.) Crow has served as the Head of the Ordo Luciferi and the Greater Church of Lucifer (later renamed Assembly of Light Bearers.) He founded the Luciferian Research Society (LRS) community hub and the Flambeau Noir International Left Hand Path Conference. He is the founder and head of the Novus Ordo Luciferi, a Gnostic Luciferian Esoteric Order. Known in English as the New Order of Light Bearers, the NOL is the primary vehicle for teaching his unique system of occultism called, Luciferian Alchemy.</p>
 <a href="https://patreon.com/novusordoluciferi" target="_blank" class="cta-button">Join Novus Ordo Luciferi on Patreon</a>
 </section>
 <section class="video">
@@ -54,4 +54,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
