--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <a href="https://patreon.com/novusordoluciferi" target="_blank" class="cta-button">Join Novus Ordo Luciferi on Patreon</a>
 </section>
 <section class="video">
-<h3>How does Gnostic Luciferianism compare with Gnostic Christianity?</h3>
+<h3>Learning Tarot is Easy!</h3>
 <div class="video-container">
-<iframe src="https://www.youtube.com/embed/VFggckToqX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/bQ1deFxIXPI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </section>
 <section class="shop">
@@ -54,5 +54,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
