--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1>Jeremy Crow</h1>
 <nav>
 <a href="/">Home</a>
-<a href="https://jeremycrow.storenvy.com/products/22257071-double-oroboros-luciferian-research-society-t-shirt-gold-on-black" target="_blank">Shop</a>
+<a href="https://jeremycrow.storenvy.com/" target="_blank">Shop</a>
 <a href="#socials">Socials</a>
 </nav>
 </header>
@@ -54,6 +54,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
