--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 <img src="/JC-Banner.png" alt="Jeremy Crow Snakeskin Banner with NOL Sigil" class="header-image">
 <h1>Jeremy Crow</h1>
 <nav>
-<a href="/">Home</a>
-<a href="https://jeremycrow.storenvy.com/" target="_blank">Shop</a>
-<a href="#socials">Socials</a>
+      <a href="/">Home</a>
+      <a href="/learn.html">Learn</a>
+      <a href="https://jeremycrow.storenvy.com/" target="_blank">Shop</a>
+      <a href="/#socials">Socials</a>
 </nav>
 </header>
 <main>
@@ -54,6 +55,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
