--- a/learn.html
+++ b/learn.html
@@ -26,7 +26,7 @@
       <p>Explore free courses on Luciferian Alchemy, Necromancy, and more, crafted by Jeremy Crow. Deepen your journey with the Novus Ordo Luciferi community.</p>
       <h3>Available Courses</h3>
       <div class="course-list">
-        <h4>Necromancy</h4>
+        <h4>Necromancy:</h4>
         <ul>
           <li><a href="/intro-to-necromancy.html">Introduction to Necromancy</a></li>
           <!-- Add more necromancy courses here -->
@@ -50,3 +50,4 @@
 </body>
 
 </html>
+
