--- a/learn.html
+++ b/learn.html
@@ -24,14 +24,16 @@
       <h2>Learning Hub</h2>
       <p>Explore free courses on Luciferian Alchemy, Necromancy, and more, crafted by Jeremy Crow. Deepen your journey with the Novus Ordo Luciferi community.</p>
       <h3>Available Courses</h3>
-      <div class="course-list">
-        <h4>Necromancy:</h4>
-        <ul>
-          <li><a href="/intro-to-necromancy.html">Introduction to Necromancy</a></li>
-          <!-- Add more necromancy courses here -->
-        </ul>
-        <!-- Add more categories (e.g., Luciferian Alchemy, Gnosticism) as courses are created -->
-      </div>
+<div class="course-list">
+    <h4>Luciferianism:</h4>
+  <ul>
+    <li><a href="/path-to-luciferian.html">A Path to Becoming Luciferian</a></li>
+  </ul>
+  <h4>Necromancy:</h4>
+  <ul>
+    <li><a href="/intro-to-necromancy.html">Introduction to Necromancy</a></li>
+  </ul>
+</div>
     </section>
   </main>
   <footer id="socials">
@@ -49,5 +51,6 @@
 </body>
 
 </html>
+
 
 
