Update learn.html to include new course page

--- a/learn.html
+++ b/learn.html
@@ -22,12 +22,16 @@
   <main>
     <section class="learning-hub">
       <h2>Learning Hub</h2>
-      <p>Explore free courses on Luciferian Alchemy, Necromancy, and more, crafted by Jeremy Crow. Deepen your journey with the Novus Ordo Luciferi community.</p>
+      <p>Explore free courses on Luciferian Alchemy, Necromancy, and more, crafted by Jeremy Crow. To deepen your journey, consider joining the Novus Ordo Luciferi community.</p>
       <h3>Available Courses</h3>
 <div class="course-list">
-    <h4>Luciferianism:</h4>
+  <h4>Luciferianism:</h4>
   <ul>
     <li><a href="/path-to-luciferian.html">A Path to Becoming Luciferian</a></li>
+  </ul>
+  <h4>Luciferian Alchemy:</h4>
+  <ul>
+    <li><a href="/salt-sulphur-mercury.html">Three Principal Elements of Alchemy: Salt, Sulphur, and Mercury</a></li>
   </ul>
   <h4>Necromancy:</h4>
   <ul>
@@ -51,6 +55,7 @@
 </body>
 
 </html>
+
 
 
 
