--- a/learn.html
+++ b/learn.html
@@ -22,7 +22,7 @@
   <main>
     <section class="learning-hub">
       <h2>Learning Hub</h2>
-      <p>Explore free courses on Luciferian Alchemy, Necromancy, and more, crafted by Jeremy Crow. To deepen your journey, consider joining the Novus Ordo Luciferi community.</p>
+      <p>Explore free courses on Luciferian Alchemy, Necromancy, and more, crafted by Jeremy Crow. To deepen your journey, consider joining the Novus Ordo Luciferi (NOL) community.</p>
       <h3>Available Courses</h3>
 <div class="course-list">
   <h4>Luciferianism:</h4>
@@ -55,6 +55,7 @@
 </body>
 
 </html>
+
 
 
 
