--- a/learn.html
+++ b/learn.html
@@ -28,6 +28,7 @@
   <h4>Luciferianism:</h4>
   <ul>
     <li><a href="/path-to-luciferian.html">A Path to Becoming Luciferian</a></li>
+    <li><a href="/lucifer-goddess.html">Is Lucifer Actually A Goddess?</a></li>
   </ul>
   <h4>Luciferian Alchemy:</h4>
   <ul>
@@ -55,6 +56,7 @@
 </body>
 
 </html>
+
 
 
 
