--- a/learn.html
+++ b/learn.html
@@ -29,6 +29,7 @@
   <ul>
     <li><a href="/path-to-luciferian.html">A Path to Becoming Luciferian</a></li>
     <li><a href="/lucifer-goddess.html">Is Lucifer Actually A Goddess?</a></li>
+    <li><a href="/guardian-angel.html">Identity of the Guardian Angel Revealed</a></li>
   </ul>
   <h4>Luciferian Alchemy:</h4>
   <ul>
@@ -56,6 +57,7 @@
 </body>
 
 </html>
+
 
 
 
