--- a/learn.html
+++ b/learn.html
@@ -39,6 +39,10 @@
   <ul>
     <li><a href="/intro-to-necromancy.html">Introduction to Necromancy</a></li>
   </ul>
+  <h4>Health, Longevity, and Immortality:</h4>
+  <ul>
+    <li><a href="/longevity.html">Health and Longevity for Occultists</a></li>
+  </ul>
 </div>
     </section>
   </main>
@@ -57,6 +61,7 @@
 </body>
 
 </html>
+
 
 
 
