--- a/learn.html
+++ b/learn.html
@@ -38,6 +38,7 @@
   <h4>Necromancy:</h4>
   <ul>
     <li><a href="/intro-to-necromancy.html">Introduction to Necromancy</a></li>
+    <li><a href="/recruit-the-dead.html">How To Recruit The Dead</a></li>
   </ul>
   <h4>Health, Longevity, and Immortality:</h4>
   <ul>
@@ -61,6 +62,7 @@
 </body>
 
 </html>
+
 
 
 
