--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <main>
 <section class="hero">
 <h2>Luciferian Occultist & Light Bearer</h2>
-<p>Jeremy Crow is an artist, teacher, and community organizer with over 40 years of experience in lucid dreaming, 30+ years as a practicing occultist, and has considered himself a Gnostic Luciferian for 25+ years. Crow is an ordained Priest in an Apostolic Gnostic Church, has been initiated into several Esoteric Orders and taken officer roles within them, including "Clandestine" Freemasonry (Co-Masonry and Memphis-Misraim), Martinism, Hermetic Order of the Golden Dawn, and the Ordo Templi Orientis (OTO.)</p>
+<p>Jeremy Crow is an artist, teacher, and community organizer with over 40 years of experience in lucid dreaming, 30+ years as a practicing occultist, and has been a Gnostic Luciferian for 25+ years. Crow is an ordained Priest in an Apostolic Gnostic Church, has been initiated into several Esoteric Orders and taken officer roles within them, including "Clandestine" Freemasonry (Co-Masonry and Memphis-Misraim), Martinism, Hermetic Order of the Golden Dawn, and the Ordo Templi Orientis (OTO.)</p>
 <p>Crow has served as the Head of the Ordo Luciferi and the Greater Church of Lucifer (later renamed Assembly of Light Bearers.) He founded the Luciferian Research Society (LRS) community hub and the Flambeau Noir International Left Hand Path Conference. He is the founder and head of the Novus Ordo Luciferi, a Gnostic Luciferian Esoteric Order. Known in English as the New Order of Light Bearers, the NOL is the primary vehicle for teaching his unique system of occultism called, Luciferian Alchemy.</p>
 <a href="https://patreon.com/novusordoluciferi" target="_blank" class="cta-button">Join Novus Ordo Luciferi on Patreon</a>
 </section>
@@ -53,6 +53,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
