--- a/learn.html
+++ b/learn.html
@@ -30,7 +30,7 @@
     <li><a href="/lucifer-goddess.html">Is Lucifer Actually A Goddess?</a></li>
     <li><a href="/guardian-angel.html">Identity of the Guardian Angel Revealed</a></li>
   </ul>
-  <h4>Luciferian Alchemy:</h4>
+  <h4>Alchemy:</h4>
   <ul>
     <li><a href="/salt-sulphur-mercury.html">Three Principal Elements of Alchemy: Salt, Sulphur, and Mercury</a></li>
   </ul>
@@ -61,6 +61,7 @@
 </body>
 
 </html>
+
 
 
 
