--- a/learn.html
+++ b/learn.html
@@ -42,6 +42,7 @@
   <h4>Health, Longevity, and Immortality:</h4>
   <ul>
     <li><a href="/longevity.html">Health and Longevity for Occultists</a></li>
+    <li><a href="/three-allies.html">Three Non-Human Allies of Humanity</a></li>
   </ul>
 </div>
     </section>
@@ -61,6 +62,7 @@
 </body>
 
 </html>
+
 
 
 
